force-app/main/default/objects/copado__MC_Result__e/fields/copado__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>copado__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>