force-app/main/default/objects/copado__MC_Result__e/fields/copado__IsFinished__c.field-meta.xml
<CustomField>
    <fullName>copado__IsFinished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Finished</label>
    <type>Checkbox</type>
</CustomField>