force-app/main/default/objects/copado__MC_Result__e/fields/copado__IsSuccess__c.field-meta.xml
<CustomField>
    <fullName>copado__IsSuccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Success</label>
    <type>Checkbox</type>
</CustomField>